Minor layout fixes.